--- a/nike.html
+++ b/nike.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=a, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css"/>
+    <link rel="stylesheet" href="src/style2.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@100&display=swap" rel="stylesheet">
     <title>Nike Landing Page</title>
