--- a/nike.html
+++ b/nike.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/style2.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@100&display=swap" rel="stylesheet">
+    <link rel="https://kind-nobel-90b676.netlify.app"/>
     <title>Nike Landing Page</title>
 </head>
 
