updated h4 on index.html

--- a/index.html.html
+++ b/index.html.html
@@ -44,7 +44,8 @@ Nike flex experience mens red shoes at Nike.com. Free shipping and returns.
 
         </div>
         <h4>
-            Coded by Korine Moore 
+            Coded by Korine Moore. <a href="https://github.com/korine941/Nike-Landing-Page" target="_blank" class="source-code">Open Source Code</a>
         </h4>
+        
     </header>
 </body>
